2006-10-30  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Use db_find_create_mailbox for POP3 user's INBOX.
	Converted all trace calls to TRACE.

2006-10-30  Paul J Stevens <paul@nfg.nl>

	* db.c:
	autocreate INBOX for pop3 users
	* dbmail-message.c:
	work on bug 429
	* dbmail-mailbox.c, imapcommands.c:
	handle fetch/search/sort on empty mailboxes
	* debian/control, debian/dbmail-ldap.postinst, 
	  debian/dbmail-ldap.templates, debian/dbmail-mysql.postinst, 
	  debian/dbmail-mysql.templates, debian/dbmail-pgsql.templates, 
	  debian/dbmail-sqlite.templates, debian/dbmail.postinst, 
	  debian/dbmail.preinst, debian/dbmail.templates, 
	  debian/po/POTFILES.in, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 
	  debian/po/nl.po, debian/po/pt_BR.po, debian/po/templates.1po, 
	  debian/po/templates.pot:
	update debconf templates and po files
	* dbmail-message.c:
	fix minor memleak
	* debian/control, debian/dbmail-ldap.templates, debian/dbmail-sieve.config, 
	  debian/dbmail-sieve.templates, debian/dbmail.templates:
	fix lintian warnings
	* dbmail.h.in:
	bump version
	* db.c:
	revert change

2006-10-29  Aaron Stone  <aaron@serendipity.cx>

	* ChangeLog:
	Corrected typos in ChangeLog
	* dbmail-imapsession.c, timsieve.c:
	More conversions of trace to TRACE.

2006-10-27  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-ldap.config, debian/dbmail-ldap.postinst, 
	  debian/dbmail-ldap.templates, debian/dbmail-mysql.config, 
	  debian/dbmail-mysql.postinst, debian/dbmail-mysql.templates, 
	  debian/dbmail-pgsql.config, debian/dbmail-pgsql.postinst, 
	  debian/dbmail-pgsql.templates, debian/dbmail-sieve.config, 
	  debian/dbmail-sqlite.config, debian/dbmail-sqlite.postinst, 
	  debian/dbmail-sqlite.templates, debian/dbmail.config, 
	  debian/dbmail.postinst, debian/dbmail.preinst, 
	  debian/dbmail.templates, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/it.po, debian/po/ja.po, 